--- a/configs/hyena_S5/associative_recall_131K_30_S5.yaml
+++ b/configs/hyena_S5/associative_recall_131K_30_S5.yaml
@@ -1,7 +1,7 @@
 seed: 1
 
 # Wandb
-project: # todo
+project: hasee__S5_dev__Associative_recall
 entity: # todo
 
 # Training
@@ -32,7 +32,7 @@ l_max: 131074
 data_kwargs:
     seed: 0
     batch_size: 16
-    data_dir: # todo
+    data_dir: ./data
 
 rng_keys: ["dropout"]
 
